--- a/src/LambdaBasicExample/.proj/proj.yaml
+++ b/src/LambdaBasicExample/.proj/proj.yaml
@@ -1,3 +1,3 @@
-name: LambdaApiExample
-project_path: /Users/hao/Documents/Projects/Github/go_lambda_learning/src/LambdaApiExample
+name: LambdaBasicExample
+project_path: /Users/hao/Documents/Projects/Github/go_lambda_learning/src/LambdaBasicExample
 mode: 511
