--- a/src/ExampleLambdaBasic/deploy/serverless-output.yaml
+++ b/src/ExampleLambdaBasic/deploy/serverless-output.yaml
@@ -3,7 +3,16 @@ Description: AWS Serverless Function
 Resources:
   ExampleLambdaBasic:
     Properties:
-      CodeUri: s3://lambda-example-lambda-basic/e7460495f3b7ae75e6bafc07d1c46af4
+      AutoPublishAlias: live
+      CodeUri: s3://lambda-example-lambda-basic/2cefb1aa8894461e481f4dbcd77b3eb7
+      DeploymentPreference:
+        Alarms:
+        - '!Ref AliasErrorMetricGreaterThanZeroAlarm'
+        - '!Ref LatestVersionErrorMetricGreaterThanZeroAlarm'
+        Hooks:
+          PostTraffic: '!Ref PostTrafficLambdaFunction'
+          PreTraffic: '!Ref PreTrafficLambdaFunction'
+        Type: Canary10Percent10Minutes
       Description: AWS Serverless Function
       FunctionName: ExampleLambdaBasic
       Handler: ExampleLambdaBasic
