--- a/src/ExampleLambdaBasic/deploy/template.yaml
+++ b/src/ExampleLambdaBasic/deploy/template.yaml
@@ -5,7 +5,16 @@ Resources:
   ExampleLambdaBasic:
     Type: AWS::Serverless::Function
     Properties:
+      AutoPublishAlias: live
       CodeUri: ./ExampleLambdaBasic.zip
+      DeploymentPreference:
+        Alarms:
+        - '!Ref AliasErrorMetricGreaterThanZeroAlarm'
+        - '!Ref LatestVersionErrorMetricGreaterThanZeroAlarm'
+        Hooks:
+          PostTraffic: '!Ref PostTrafficLambdaFunction'
+          PreTraffic: '!Ref PreTrafficLambdaFunction'
+        Type: Canary10Percent10Minutes
       Description: AWS Serverless Function
       FunctionName: ExampleLambdaBasic
       Handler: ExampleLambdaBasic
