add api permission template

--- a/src/ExampleLambdaApi/.proj/proj.yaml
+++ b/src/ExampleLambdaApi/.proj/proj.yaml
@@ -1,4 +1,5 @@
 name: ExampleLambdaApi
 description: AWS Serverless Function
 project_path: /Users/hao/Documents/Projects/Github/go_lambda_learning/src/ExampleLambdaApi
+event_source_type: 2
 mode: 511
