--- a/src/ExampleLambdaApi/deploy/template.yaml
+++ b/src/ExampleLambdaApi/deploy/template.yaml
@@ -16,7 +16,13 @@ Resources:
           PreTraffic: '!Ref PreTrafficLambdaFunction'
         Type: Canary10Percent10Minutes
       Description: AWS Serverless Function
+      Events:
+        ExampleLambdaApi:
+          Properties:
+            Method: any
+            Path: /{proxy+}
+          Type: Api
       FunctionName: ExampleLambdaApi
       Handler: ExampleLambdaApi
-      Role: arn:aws:iam::842913648961:role/lambda_basic_execution
+      Role: arn:aws:iam::842913648961:role/lambda-gateway-execution-role
       Runtime: go1.x
