--- a/src/ExampleXRay/.proj/apis.yaml
+++ b/src/ExampleXRay/.proj/apis.yaml
@@ -1,5 +1,5 @@
 - http_method: GET
-  relative_path: /metric
+  relative_path: /api/v1/metric
   api_handler_func: MetricHandlerFunc
   api_handler_package_func: metric
   source_file: /api/metric/api_metric.go
