--- a/src/ApiToolTest/.proj/apis.yaml
+++ b/src/ApiToolTest/.proj/apis.yaml
@@ -3,23 +3,30 @@
   source_file: /api/home/api_home.go
   http_method: POST
   relative_path: /home/hello_world/:path_id
-  path_data:
-    name: pathData
-    fields:
-    - name: PathId
-      type: string
-  query_data:
-    name: queryData
-    fields:
-    - name: Name
-      type: string
-  post_data:
-    name: postData
-    fields:
-    - name: Address
-      type: string
+  path_data: null
+  query_data: null
+  post_data: null
   response_data:
     name: respData
     fields:
     - name: Result
       type: string
+      substructdata: null
+    - name: Tags
+      type: ""
+      substructdata: null
+    - name: ATag
+      type: ""
+      substructdata: null
+    - name: BTag
+      type: Tag
+      substructdata: null
+    - name: MTag
+      type: ""
+      substructdata: null
+    - name: Content
+      type: ""
+      substructdata: null
+    - name: Content2
+      type: ""
+      substructdata: null
